hphp/hack/test/typecheck/strict_switch/nullable_class.php.exp
WARN: File "nullable_class.php", line 23, characters 10-13:
Invalid case: This case will never match.
A value of type `C` can never be equal to a value of type `null` (Warn[12007])
ERROR: File "nullable_class.php", line 23, characters 10-13:
Switching on `C` but using constant from `null` (Typing[4023])
  File "nullable_class.php", line 17, characters 35-35:
  expecting `C` based on this
ERROR: File "nullable_class.php", line 56, characters 11-12:
All cases already covered; a redundant `default` case prevents detecting future errors. If your goal is to guard against invalid values for this type, do an `is` check before the switch. (Typing[4022])
  File "nullable_class.php", line 59, characters 5-12:
  default declared here
